<resources>
    <string name="app_name">PokeDex</string>
    <string name="pokedex">Pokedex</string>
    <string name="my_pokemon">My pokemon</string>
    <string name="first_generation">First Generation</string>
    <string name="second_generation">Second Generation</string>
    <string name="third_generation">Third Generation</string>
    <string name="fourth_generation">Fourth Generation</string>
    <string name="fifth_generation">Fifth Generation</string>
    <string name="sixth_generation">Sixth Generation</string>
    <string name="seventh_generation">Seventh Generation</string>
    <string name="eighth_generation">Eighth Generation</string>
    <string name="nineth_generation">Ninth Generation</string>
    <string name="pick_a_pokemon_generation">Pick a pokemon generation</string>
    <string name="abilities">Abilities</string>
    <string name="stats">Stats</string>
    <string name="stat_icon">Stat icon</string>
    <string name="pokemon_normal_sprite">Pokemon normal sprite</string>
    <string name="pokemon_shiny_sprite">Pokemon shiny sprite</string>
    <string name="capture_pokemon">Capture Pokemon</string>
    <string name="you_haven_t_added_any_pokemon_yet">You haven´t added any Pokemon yet, you could add Pokemon to your list using the pokemon detail view</string>
    <string name="search_a_pokemon">Search a pokemon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_a_account_yet">Don\'t have a account yet?, Sign up for free</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="cancel">Cancel</string>
    <string name="sync_to_remote_db">Sync to remote DB</string>
    <string name="logout">Logout</string>
</resources>